# kenmerkendewaarden

./: .bumpversion.cfg  .flake8  README.md  pyproject.toml
.github/workflows/: pypi-upload.yml  pytest-py39-mindeps.yml  pytest.yml  sphinx-docs.yml
Stations/: DELFZL.xls  DENHDR.csv  Hydra-NL_manual.docx  SCHEVNGN.xls  Template.csv  VLIELHVN.csv  VLISSGN.csv  VLISSGN.xls  data28992.geojson  data4326.geojson  excedance_water_level_14-4.xls  excedance_water_level_14-8.xls  excedance_water_level_218.xls  excedance_water_level_25-1.xls  excedance_water_level_6-3.xls
Stations/Pdrive/: DELFZL.csv  DENHDR.xls  HARLGN.csv  HOEKVHLD.csv  HOEKVHLD.xls  ROOMPBTN.csv  SCHEVNGN.csv  SCHIERMNOG.csv  SCHIERMNOG.xls  VLIELHVN.xls  VLISSGN.csv
docs/: CONTRIBUTING.md  conf.py  example.md  generate-example-figures.py  index.rst  modules.rst  whats-new.md
docs/examples/: KWK_getcheckdata.py  KWK_process.py
examples/: KWK_geometries.ipynb  KWK_getcheckdata.py  KWK_process.ipynb  KWK_process.py  calc_hat_lat_fromcomponents.py  compute_hat_lat.py  interactive_map.ipynb
kenmerkendewaarden/: __init__.py  data_analysis.py  data_retrieve.py  gemiddeldgetij.py  havengetallen.py  overschrijding.py  slotgemiddelden.py  tidalextremes.py  tidalindicators.py  tidalindicators_springneap.py  utils.py
tests/: conftest.py  test_data_analysis.py  test_data_retrieve.py  test_gemiddeldgetij.py  test_havengetallen.py  test_overschrijding.py  test_slotgemiddelden.py  test_tidalextremes.py  test_tidalindicators.py  test_utils.py
